bug: header overflow

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -12,7 +12,7 @@ ul.sidenav .user-view .background img {
 }
 
 header.layout-header {
-  position: absolute;
+  position: fixed;
   top: 0;
   width: 100%;
   z-index: 100;
